Fixed notation to 1-based indices. Rewrote part of the proof of the encoding section to be more understandable. Fix some errors therein.

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -102,6 +102,7 @@
 \newcommand{\errorbound}{\varepsilon}
 \newcommand{\emptylist}{\epsilon}
 \newcommand*{\normalceil}[1]{\lceil #1 \rceil} % almost the same as the standard \ceil, but without \left and \right
+% \newcommand*{\normalnorm}[1]{\|#1\|}
 
 \newcommand*{\sisadv}{\overline{\adv}}
 \newcommand*{\sisadvkots}{\overline{\adv}}
@@ -128,4 +129,11 @@
 \newcommand*{\openencode}{\ensuremath{\mathsf{Encode}_{\mathrm{op}}}}
 \newcommand*{\opendecode}{\ensuremath{\mathsf{Decode}_{\mathrm{op}}}}
 \DeclareMathOperator*{\Span}{Span}
+
+\newcommand*{\qbasis}{\ensuremath{\ast}} % index used for the special basis vector (q,0,\ldots) in the kernel of proj_q
+\newcommand*{\tensor}{\mathbin{\otimes}}
+\newcommand*{\reals}{\mathbb{R}}
+
+\newcommand*{\ENC}{\mathrm{enc}}
+\newcommand*{\DEC}{\mathrm{dec}}
 
