Fixed 1-based index Defined \binsca in prelims Changed \binsca to include _\tau in notation, because we actually need leading 0s

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -55,7 +55,7 @@
 
 \newcommand{\ring}{\mathcal{R}}
 \newcommand{\decomp}{\mathsf{dec}}
-\newcommand{\binsca}{\mathsf{bin}}
+\newcommand{\binsca}{\mathsf{bin}_{\tau}}
 \newcommand{\proj}{\mathsf{proj}}
 \newcommand{\lbl}{\mathsf{label}}
 \newcommand{\ball}[2]{\mathcal{B}_{#1, #2}}
