--- a/sections/prelim.tex
+++ b/sections/prelim.tex
@@ -20,7 +20,8 @@ We write $\vec{v}^\transpose$ to denote the transpose of $\vec{v}$ and $v_i$ to 
 We generalize this notation and write $\vec{v}_{\subrange{i}}$ to denote the $(i-1)$-length prefix of $\vec{v}$.
 We use the same notation for a bit-string $s$, denoting by $s_i$ the $i$-th bit and by $s_{\subrange{i}}$ the prefix consisting of the first $i-1$ bits of $s$.
 From time to time we will slightly abuse this notation and use a bit-string $s$ as an index.
-In this case the index is to be understood as the canonical interpretation of $s$ as an integer in big-endian encoding.\gnote{Define bin here, check actual usage}
+In this case the index is to be understood as the canonical interpretation of $s$ as an integer in big-endian encoding.\gnote{Check actual usage of this abuse of notation.}
+Conversely, for $0\leq t \leq 2^\tau-1$ we denote by $\binsca(t)\in\{0,1\}^\tau$ the big-endian binary decomposition of $t$ (possibly with leading zeros to ensure a fixed length of $\tau$).
 % \gnote{We actually mix 0-based indices and 1-based indices, so this is not true as stated here. This whole section needs discussion and review.}
 
 For $n\in\NN$, we denote by $\interval{n}$ the set $\{1,\dots,n\}$.
@@ -39,9 +40,9 @@ Our concrete construction works over a power-of-two cyclotomic polynomial ring.
 Let $\Phi_{2n} = X^n+1$ be the cyclotomic polynomial with $n$ a power of 2. 
 We work in the polynomial ring $\ring =  \defring$. For the purpose of taking norms and transmitting data, we represent elements of $\ring$ as $n$-dimensional vectors $\ZZ^n$ with $(c_1,\dots,c_{n})^\transpose\in \ZZ^n$ representing the ring element $\sum_{i=1}^{n} c_{i} X^{i-1}$.
 For any odd prime number $q$, we always represent $\ZZ_q$ by the set $\{-\tfrac{q-1}{2},\ldots,\tfrac{q-1}{2}\}$ centered around 0.
-Let $q$ be some prime such that $q \equiv 1 \bmod 2n$. \gnote{We do not actually need this restriction in our constructions. It only matters for efficiency. Move to Benchmark section?}
-$\ring_q$ refers to the quotient ring of $\ring$ modulo $q$, represented by vectors in $\ZZ_q^n$. Whenever we need to take representatives to view these as elements from $\ring$, we do so by taking representatives centered around 0 as above.
-Let $\vec{c} \in \ring$ be a ring element with coefficients $(c_0,\ldots, c_{n-1})$.
+Let $q$ be some odd prime. % such that $q \equiv 1 \bmod 2n$. \gnote{We do not actually need this restriction in our constructions. It only matters for efficiency. Move to Benchmark section?}
+$\ring_q$ refers to the quotient ring of $\ring$ modulo $q$, represented by vectors in $\ZZ_q^n$. Whenever we need to take representatives to view these as elements from $\ring$, we do so by taking representatives centered around 0 as above. For efficiency reasons, our parameter choice will always satisfy $q \equiv 1 \bmod 2n$, so we can use more efficient NTT-based multiplication in $\ring_q$.
+Let $\vec{c} \in \ring$ be a ring element with coefficients $(c_1,\ldots, c_{n})$.
 We work, unless specified otherwise, with the $\norm{.}_\infty$-norm.
 We define $\norm{\vec{c}}\coloneqq\norm{\vec{c}}_\infty = \max_{i}\abs{c_i}$ and $\norm{\vec{c}}_1 = \sum_{i}\abs{c_i}$ on $\ring$ by taking the norm of the coefficient vector in the monomial basis.
 We extend these definitions to norms on $\ring_q$ by taking representatives in $\ring$ using coefficients in $\{-\tfrac{q-1}{2},\ldots,\tfrac{q-1}{2}\}$.
