Start separate eprint / camera-ready versions. Some draft regarding modules added.

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -83,6 +83,8 @@
 \newcommand{\modopk}{A_{\mathsf{opk}}}
 \newcommand{\modsig}{A_{\mathsf{sig}}}
 
+\newcommand{\modmul}{\mathbin{\cdot_A}} %action of ring on abelian group (i.e. ring - module mul)
+
 \newcommand*{\projring}{\proj_{\eta,\limbs}}
 \newcommand*{\decompring}{\decomp_{\eta,\limbs}}
 \newcommand*{\projmod}[1]{\proj_{#1}}
