--- a/sections/prelim.tex
+++ b/sections/prelim.tex
@@ -48,7 +48,7 @@ We define $\norm{\vec{c}}\coloneqq\norm{\vec{c}}_\infty = \max_{i}\abs{c_i}$ and
 We extend these definitions to norms on $\ring_q$ by taking representatives in $\ring$ using coefficients in $\{-\tfrac{q-1}{2},\ldots,\tfrac{q-1}{2}\}$.
 We also extend the definition of $\norm{.}_\infty$ to $\ring^m$ for any $m$ by $\norm{\vec{c}}_{\infty}= \max_i\norm{\vec{c}_i}_\infty$.
 
-Our convention is that mixed multiplication of an element from $\ring$ with an element from $\ring_q$ gives an element from $\ring_q$, thereby viewing $\ring_q$ as an $\ring$-module.
+Our convention is that mixed multiplication of an element from $\ring$ with an element from $\ring_q$ gives an element from $\ring_q$, thereby viewing $\ring_q$ as an $\ring$-module (see \autoref{def:RModule} below).
 
 We denote by $\ball{\beta}{q}$ the ball $\ball{\beta}{q} = \{a\in\ring_q\mid \norm{a}\leq\beta\}$. We are only interested in the case $\beta < \tfrac{q}{2}$.
 By 
@@ -74,7 +74,33 @@ The security of our constructions relies on the hardness of the short integer so
   \]
 \end{definition}
 
+\paragraph{$\ring$-modules}
+In order to aggregate signatures, we will be taking linear combinations of individual elements, where for security reasons the coefficients need to be from a sufficiently large space. We use the ring $\ring = \defring$ for those coefficients. This means that for both signatures and certain intermediate objects appearing during our constructions, we need to be able to both add them together and to multiply them with elements from $\ring$. Recall that this is precisely captured by the notion of an $\ring$-module, so let us recall some relevant notions here for convenience to the reader. We refer to any textbook on linear algebra such as \cite{FOO} for more details.
+\begin{definition}[$\ring$-module\label{def:RModule}]
+For a commutative ring $\ring$, an $\ring$-module $A$ is an abelian group (with addition denoted by $+$) together with a multiplication operation
+\[
+ \modmul\colon\,\ring\times A \to A,\quad (r, x)\mapsto r\modmul x
+\]
+satifying $(rs)\modmul x = r\modmul (s\modmul x)$ (associativity), $(r+s)\modmul x = (r\modmul x) + (s\modmul x)$ as well as $r\modmul(x + y) = (r\modmul x) + (r\modmul y)$ (distributivity) and $1\modmul x = x$ for all $r,s\in\ring, x,y\in A$.
+\end{definition}
+This is really the same definition as a vector space over a field, except that we use a ring instead of a field. As opposed to (finite-dimensional) vector spaces, not every (finitely generated) $\ring$-module is isomorphic to $\ring^n$ for some $n$. Similar to vector spaces, the multiplication is often denoted by just $\cdot$ or even just concatenation; we only write $\modmul$ here for emphasis.
 
+We will only consider $\ring$-modules for the specific choice of ring $\ring = \defring$. The only $\ring$-modules we will need are of the form $\ring^n$ or $\ring_q^n$ for $q$ prime and $n\in\NN$ with module structures given by
+\begin{align*}
+ \modmul\colon\, \ring \times \ring^n \to \ring^n, \quad (r,(x_1,\ldots, x_n))\mapsto (r_1x_1,\ldots,r_nx_n)\\
+ \modmul\colon\, \ring \times \ring_q^n \to \ring_q^n,\quad (r,(x_1,\ldots, x_n)) \mapsto (r_1x_1\bmod q,\ldots, r_nx_n\bmod q)
+\end{align*}
+
+\gnote{Proof that these are $\ring$-modules. I would prefer refering a linear algebra textbook}
+
+We also need appropriate maps between modules that preserve this structure. Notably, a map $f\colon\,A\to B$ between $\ring$-modules with the same $\ring$ is called $\ring$-linear, if $f(x+y) = f(x) + f(y)$ and $f(rx) = rf(x)$ holds for each $x,y\in A$, $r\in\ring$.
+
+
+
+\gnote{Move McDiarmid bound to this section here}
+
+
+\gnote{needs versioning}
 We will construct a particular homomorphic vector commitment (HVC) denoted by $\hvcplain$ in \autoref{sec:veccom}, then improve it to a more compact $\hvcencoded$ in \autoref{sect:efficientencoding}.
 In \autoref{sec:otms}, we construct a key-homomorphic one-time signature scheme (KOTS) denoted by $\otschip$. In \autoref{sec:nidv}, we combine those components to construct a synchronized aggregatable signature scheme.
 Our concrete constructions depends on a significant number of tunable parameters, whose choices affects both security, efficiency and functionality. \autoref{table:meaning_of_parameters} gives an overview and is intended as a reference for later, to aid the reader.
@@ -119,3 +145,5 @@ Our concrete constructions depends on a significant number of tunable parameters
 \medskip % Alternatively, put caption on top.
  \caption{Parameters used in our concrete homomorphic vector commitment (HVC) and key-homomorphic one-time signature (KOTS) schemes. Since we combine those to a synchronized aggregatable signature scheme later, the parameters are related.\label{table:meaning_of_parameters}}
 \end{table}
+
+
