Modified main alg for camera-ready. Fighting with the cryptocode package (does it redefine \if ??? WTF???).

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -110,8 +110,9 @@
 \newcommand*{\sisadvkots}{\overline{\adv}}
 \newcommand*{\hint}{\mathrm{hint}}
 
-\newcommand*{\hvcencoded}{\hvc_{\textup{Encoded}}^{\textup{Chip}}}
-\newcommand*{\hvcplain}{\hvc^{\textup{Chip}}_{0}}
+\newcommand*{\hvccamera}{\hvc^{\textup{Chip}}} %Chipmunk's HVC in the camera-ready version with the bounds checks
+\newcommand*{\hvcplain}{\hvc^{\textup{Chip}}_{0}} %Chipmunk's HVC in the eprint version (without encodings) with the bounds check
+\newcommand*{\hvcencoded}{\hvc_{\textup{Encoded}}^{\textup{Chip}}} %Chipmunk's HVC in the eprint version with the encodings
 \newcommand*{\otschip}{\hots^{\textup{Chip}}}
 \newcommand*{\msigchip}{\msig^{\textup{Chip}}}
 
